--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "express-jsdoc-swagger": "^1.3.2",
+    "mysql2": "^2.2.5",
+    "swagger-jsdoc": "6.0.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
